fix(ui): prevent textarea overflowing in some devices

--- a/static/form.css
+++ b/static/form.css
@@ -1,5 +1,7 @@
 #paper {
     width: auto;
+    display: flex;
+    flex-direction: column;
     aspect-ratio: 268/359;
     margin-left: auto;
     margin-right: auto;
@@ -37,7 +39,7 @@
 #message {
     margin-top: 1em;
     width: 100%;
-    height: 60%;
+    flex-grow: 1;
     resize: none;
     overflow-wrap: break-word;
     white-space: normal;
